chore: restructure so all in master

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Katrina Hayes - Web Developer</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link href="./images/favicon.png" rel="icon" type="image/x-icon" />
+    <link href="./assets/images/favicon.png" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -110,7 +110,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/playways" target="_blank" rel="noreferrer"
                             aria-label="View the Playways website">
-                            <img src="./images/playways.png" loading="lazy" alt="Playways">
+                            <img src="./assets/images/playways.png" loading="lazy" alt="Playways">
                             <figcaption>
                                 <p>See it in action (Chrome on desktop is best for now!)</p>
                             </figcaption>
@@ -136,7 +136,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/waltz" target="_blank" rel="noreferrer"
                             aria-label="View the Waltz music visualisation website">
-                            <img src="./images/waltz.png" loading="lazy" alt="Waltz">
+                            <img src="./assets/images/waltz.png" loading="lazy" alt="Waltz">
                             <figcaption>
                                 <p>View/listen live (only on desktop for now!)</p>
                             </figcaption>
@@ -162,7 +162,7 @@
                     <figure class="circle">
                         <a href="https://co-canvas.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the CoCanvas website">
-                            <img src="./images/cocanvas.png" loading="lazy" alt="CoCanvas">
+                            <img src="./assets/images/cocanvas.png" loading="lazy" alt="CoCanvas">
                             <figcaption>
                                 <p>Make pixel art on the live site</p>
                             </figcaption>
@@ -189,7 +189,7 @@
                     <figure class="circle">
                         <a href="https://bookpinch.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the Bookpinch website">
-                            <img src="./images/bookpinch.png" loading="lazy" alt="BookPinch">
+                            <img src="./assets/images/bookpinch.png" loading="lazy" alt="BookPinch">
                             <figcaption>
                                 <p>View the live site & pinch books</p>
                             </figcaption>
@@ -215,7 +215,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/project0" target="_blank" rel="noreferrer"
                             aria-label="View the Noughts & Crosses website">
-                            <img src="./images/noughts&crosses.png" loading="lazy" alt="Noughts&Crosses">
+                            <img src="./assets/images/noughts&crosses.png" loading="lazy" alt="Noughts&Crosses">
                             <figcaption>
                                 <p>View the live site & play a game</p>
                             </figcaption>
